Выполнена разметка страниц index, form и catalog

--- a/catalog.html
+++ b/catalog.html
@@ -33,11 +33,11 @@
       </nav>
     </header>
     <main>
-      <header class="catalog__header">
+      <header class="catalog-header">
           <h2 class="catalog-title">Каталог товаров</h2>
       </header>
       <section class="item-blocks">
-        <article class="item-block item-block--1">
+        <article class="item-block">
           <div class="item-block__photo">
             <a href="">
               <img src="img/item1.jpg" width="100" height="100" alt="Зайчик-попрыгайчик">
@@ -45,13 +45,13 @@
           </div>
           <div class="item-block__info">
             <a href=""> 
-              <h3 class="item-block-title">Зайчик-попрыгайчик</h3>
+              <h3 class="item__title">Зайчик-попрыгайчик</h3>
             </a>
-            <p class="item-description">Рост 30см, вес 200г </p>
-            <a href="" class="item-price">1200 руб.</a>
+            <p class="item__description">Рост 30см, вес 200г </p>
+            <a href="" class="item__price">1200 руб.</a>
           </div>
         </article>
-        <article class="item-block item-block--2">
+        <article class="item-block">
           <div class="item-block__photo">
             <a href="">
               <img src="img/item2.jpg" width="100" height="100" alt="Корзинка для белья">
@@ -59,13 +59,13 @@
           </div>
           <div class="item-block__info">
             <a href=""> 
-              <h3 class="item-block-title">Корзинка для белья</h3>
+              <h3 class="item__title">Корзинка для белья</h3>
             </a>
-            <p class="item-description">Диаметр 15см, высота 10см</p>
-            <a href="" class="item-price">690 руб.</a>
+            <p class="item__description">Диаметр 15см, высота 10см</p>
+            <a href="" class="item__price">690 руб.</a>
           </div>
         </article>
-        <article class="item-block item-block--3">
+        <article class="item-block">
           <div class="item-block__photo">
             <a href="">
               <img src="img/item3.jpg" width="100" height="100" alt="Большая корзинка для игрушек">
@@ -73,18 +73,18 @@
           </div>
           <div class="item-block__info">
             <a href=""> 
-              <h3 class="item-block-title">Большая корзинка для игрушек</h3>
+              <h3 class="item__title">Большая корзинка для игрушек</h3>
             </a>
-            <p class="item-description">Диаметр 30см, высота 30см</p>
-            <a href="" class="item-price">1500 руб.</a>
+            <p class="item__description">Диаметр 30см, высота 30см</p>
+            <a href="" class="item__price">1500 руб.</a>
           </div>
         </article>
       </section>
-      <section class="content">
+      <section class="videocontent">
         <a href=""> 
-          <h3 class="video-title">Процесс производства</h3>
+          <h3 class="videocontent__title">Процесс производства</h3>
         </a>          
-        <article class="content__wrapper">
+        <article class="videocontent__wrapper">
           <video width="400" height="300" controls="controls" preload="metadata" poster="video/production.jpg">
             <source src="video/production.ogv" type="video/ogg">
             <source src="video/production.mp4" type="video/mp4">
