--- a/index.html
+++ b/index.html
@@ -3,21 +3,24 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Мишка</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="less/style.less">
 </head>
 <body>
   <header class="page-header">
     <h1 class="visually-hidden">Мишка</h1>
     <div class="page-header__logo">
       <a>
-        <img src="img/logo.svg" width="100" height="100" alt="Mishka">
+        <img src="img/logo-mobile.svg" width="100" height="100" alt="Mishka">
       </a>
     </div>
     <nav class="main-nav  main-nav--closed  main-nav--nojs">
-      <a href="" class="main-nav__toggle">Открыть меню</a>   
+      <a href="" class="main-nav__toggle">Открыть меню</a>
       <div class="main-nav__wrapper">
         <ul class="main-nav__items">
           <li class="main-nav__item">
-            <a href="">Каталог товаров</a>              	
+            <a href="">Каталог товаров</a>
           </li>
           <li class="main-nav__item">
             <a href="">Вязание на заказ</a>
@@ -27,7 +30,7 @@
           </li>
           <li class="main-nav__item">
             <a href="">Корзина: пока пуста</a>
-          </li>            	
+          </li>
         </ul>
       </div>
     </nav>
@@ -35,7 +38,7 @@
   <main>
     <section class="features">
       <div class="features__header">
-        <h2 class="features-title">Милые штуки ручной работы для дома</h2>   	
+        <h2 class="features-title">Милые штуки ручной работы для дома</h2>
       </div>
       <div class="features-items__wrapper">
         <ul class="feature-item">
@@ -49,7 +52,7 @@
             <a href="">Детские игрушки</a>
           </div>
         </li>
-      </ul>	
+      </ul>
     </div>
   </section>
   <section class="headline-item">
@@ -78,7 +81,7 @@
       <a href="">Заказать</a>
     </article>
   </section>
-  <section class="advantages"> 
+  <section class="advantages">
     <h2 class="advantages__title">Коротко о нас</h2>
     <ul class="advantages__items">
       <li class="advantages__item">Эклогически чистые материалы</li>
@@ -97,8 +100,8 @@
       <cite class="reviews__auhor-contacts">@misssssiskras</cite>
     </blockquote>
     <div class="rewiews-toggle">
-      <a href="" class="reviews__btn--prev" >Назад</a> 
-      <a href="" class="reviews__btn--next">Вперед</a> 
+      <a href="" class="reviews__btn--prev" >Назад</a>
+      <a href="" class="reviews__btn--next">Вперед</a>
     </div>
     <a class="reviews__write  btn" href="">Написать</a>
   </section>
@@ -129,7 +132,7 @@
   <div class="page-footer__wrapper">
     <div class="page-footer__contacts">
       <h2 class="page-footer__title">Контакты</h2>
-      <a href="" class="page-footer__contacts">info@mimimishkashop.ru</a>  
+      <a href="" class="page-footer__contacts">info@mimimishkashop.ru</a>
       <p> г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</p>
     </div>
     <div class="page-footer__social">
