--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h2 class="features-title">Милые штуки ручной работы для дома</h2>
       </div>
       <div class="features-items__wrapper">
-        <ul class="feature-item">
+        <ul class="feature-items">
           <li class="feature-item">
             <div class="feature-item__wrapper  feature-item__wrapper--top">
              <a href="">Предметы интерьера</a>
@@ -55,58 +55,62 @@
       </ul>
     </div>
   </section>
-  <section class="headline-item">
+  <section class="headline-item  container">
     <div class="headline-item__wrapper">
       <h2 class="headline-item__title">Вязанные корзинки</h2>
       <b class="headline-item__label">Товар недели</b>
       <p class="headline-item__info">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
     </div>
-    <table class="item-description">
-      <tr>
+    <table class="items-description">
+      <tr class="item-description">
         <td class="item-description__field">Цвет:</td>
         <td class="item-description__value">«Тиффани»/серый</td>
       </tr>
-      <tr>
+      <tr class="item-description">
         <td class="item-description__field">Диаметр:</td>
         <td class="item-description__value">25 см</td>
       </tr>
-      <tr>
+      <tr class="item-description">
         <td class="item-description__field">Высота:</td>
         <td class="item-description__value">15 см</td>
       </tr>
     </table>
-    <article>
-      <img src="img/baskets.svg" width="100" height="100" alt="Корзина">
-      <span>Цена: 990 руб.</span>
-      <a href="">Заказать</a>
+    <article class="item-spec">
+      <img class="item-spec__photo"  src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Корзинки">
+      <span class="item-spec__price">Цена: 990 руб.</span>
+      <a href=""  class="button  item-spec__button">Заказать</a>
     </article>
   </section>
-  <section class="advantages">
+  <section class="advantages  container">
     <h2 class="advantages__title">Коротко о нас</h2>
     <ul class="advantages__items">
-      <li class="advantages__item">Эклогически чистые материалы</li>
-      <li class="advantages__item">Скандинавский стиль по российской цене</li>
-      <li class="advantages__item">Увеличивает лайки на фотографиях</li>
-      <li class="advantages__item">Связано вручную с любовью и умилением</li>
-      <li class="advantages__item">Поддержка отечественного производителя</li>
-      <li class="advantages__item">Поставляется в подарочной упаковке</li>
+      <li class="advantages__item item__1">Экологичеки чистые материалы</li>
+      <li class="advantages__item  item__2" >Скандинавский стиль по российской цене</li>
+      <li class="advantages__item  item__3">Увеличивает лайки на фотографиях</li>
+      <li class="advantages__item  item__4">Связано вручную с любовью и умилением</li>
+      <li class="advantages__item  item__5">Поддержка отечественного производителя</li>
+      <li class="advantages__item  item__6">Поставляется в подарочной упаковке</li>
     </ul>
   </section>
-  <section class="reviews">
+  <section class="reviews  container">
     <h2 class="reviews__title">Отзывы</h2>
     <blockquote class="reviews__item">
-      <p>Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек.В отчаянии я накупила аксуссуаров и игрушек в Мишке, и мои фотографии сразу стали более стильнее, а также набирают больше лайков.</p>
+      <p>Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек.В отчаянии я накупила аксуссуаров и игрушек в Мишке, и мои фотографии сразу стали более стильнее, а также набирают больше лайков!</p>
       <cite class="reviews__auhor-name">Анастасия Красильникова</cite>
       <cite class="reviews__auhor-contacts">@misssssiskras</cite>
     </blockquote>
-    <div class="rewiews-toggle">
-      <a href="" class="reviews__btn--prev" >Назад</a>
-      <a href="" class="reviews__btn--next">Вперед</a>
+    <div class="reviews-toggle">
+      <a  class="reviews__button  reviews__button--prev" href="" >
+        <img src="img/icon-left-arrow.svg" width="50" height="25" alt="Назад">
+      </a>
+      <a  class="reviews__button  reviews__button--next" href="">
+        <img src="img/icon-right-arrow.svg" width="50" height="25" alt="Вперед">
+      </a>
     </div>
-    <a class="reviews__write  btn" href="">Написать</a>
+    <a class="reviews__write" href="">Написать</a>
   </section>
   <section class="modal-block modal-block--opened  modal-block--nojs">
-    <div class="modal-block__wrapper">
+    <div class="modal-block__wrapper visually-hidden">
       <h1 class="modal-block__title"></h1>
       <p>Выберите размер</p>
       <div class="modal-block__buttons">
@@ -114,37 +118,35 @@
         <button class="modal-block__button" type="button">M</button>
         <button class="modal-block__button" type="button">L</button>
       </div>
-      <a class="modal-block__basket btn" href="">Добавить</a>
+      <a class="button  modal-block__basket" href="">Добавить</a>
     </div>
   </section>
   <section class="contact-form">
-    <div class="map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123713!2d30.32089461573673!3d59.93879686904836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1470392419787" width="1200" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
-    <div class="contact-form">
-      <form class="contact__form" action="contact-form.php" method="post">
-        <input type="submit" name="rewiew" value="Напишите нам">
-      </form>
+    <div class="contact-form__wrapper">
+      <h2 class="contact-form__title">Контакты</h2>
+      <p>e-mail:</p>
+      <a href="" class="contact-form__contacts">info@mimimishkashop.ru</a>
+      <p>адрес:</p>
+      <p> г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</p>
     </div>
   </section>
 </main>
 <footer class="page-footer">
-  <div class="page-footer__wrapper">
-    <div class="page-footer__contacts">
-      <h2 class="page-footer__title">Контакты</h2>
-      <a href="" class="page-footer__contacts">info@mimimishkashop.ru</a>
-      <p> г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</p>
+  <div class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123713!2d30.32089461573673!3d59.93879686904836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1470392419787" width="320" height="458" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
+    <form class="contact__form" action="contact-form.php" method="post">
+      <input type="submit" name="review" value="Н4апишите нам">
+    </form>
     <div class="page-footer__social">
-      <span class="social-links">
-        <a class="social-link  social-link--in" href="https://www.instagram.com/htmlacademy">Вконтакте</a>
-        <a class="social-link  social-link--fb" href="https://www.facebook.com/htmlacademy">Фейсбук</a>
-        <a class="social-link  social-link--tw" href="https://www.twitter.com/htmlacademy">Твиттер</a>
-      </span>
-    </div>
-    <div class="page-footer__copyright"> Разработано:
-      <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-    </div>
+    <span class="social-links">
+      <a class="social-link  social-link--in" href="https://www.instagram.com/htmlacademy">Вконтакте</a>
+      <a class="social-link  social-link--fb" href="https://www.facebook.com/htmlacademy">Фейсбук</a>
+      <a class="social-link  social-link--tw" href="https://www.twitter.com/htmlacademy">Твиттер</a>
+    </span>
+  </div>
+  <div class="page-footer__copyright"> Разработано:
+    <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
   </div>
 </footer>
 </body>
