--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Мишка</title>
 </head>
-<body class="catalog-page">
+<body class="form-page">
   <header class="page-header">
     <h1 class="visually-hidden">Мишка</h1>
     <div class="page-header__logo">
@@ -13,11 +13,11 @@
       </a>
     </div>
     <nav class="main-nav  main-nav--closed  main-nav--nojs">
-      <a href="" class="main-nav__toggle">Открыть меню</a>  
+      <a href="" class="main-nav__toggle">Открыть меню</a>
       <div class="main-nav__wrapper">
         <ul class="main-nav__items">
           <li class="main-nav__item">
-            <a href="">Каталог товаров</a>                
+            <a href="">Каталог товаров</a>
           </li>
           <li class="main-nav__item">
             <a href="">Вязание на заказ</a>
@@ -27,60 +27,60 @@
           </li>
           <li class="main-nav__item">
             <a href="">Корзина: пока пуста</a>
-          </li>             
+          </li>
         </ul>
       </div>
     </nav>
   </header>
-  <main>
-    <section class="contactform">
-      <div class="contactform__header">
-        <h2 class="contactform__title">Вязание на заказ</h2>
+  <main class="form-page">
+    <section class="form-page__header">
+      <div class="form-page__wrapper">
+        <h2 class="form-page__title">Вязание на заказ</h2>
         <p>Мы будем рады воплотить  жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали</p>
       </div>
     </section>
     <section class="filter">
-      <div class="filter__wrapper"> 
+      <div class="filter__wrapper">
         <form class="filter" action="#" method="post">
           <fieldset class="filter__wrapper  filter__wrapper--type">
             <legend class="filter__title">Тип</legend>
             <div class="filter__field">
               <input class="filter__radio  filter__radio--cheked" type="radio" name="type" id="type-home" checked>
-              <label for="type-home"> Аксессуар для интерьера</label>
+              <label for="type-home" class="filter__type filter__type--home"> Аксессуар для интерьера</label>
             </div>
             <div class="filter__field">
               <input class="filter__radio" type="radio" name="type" id="type-toy">
-              <label for="type-toy"> Детская Игрушка</label>
+              <label for="type-toy"  class="filter__type filter__type--toy"> Детская Игрушка</label>
             </div>
           </fieldset>
           <fieldset class="filter__wrapper  filter__wrapper--color">
             <legend class="filter__title">Цвет</legend>
             <div class="filter__field">
               <input class="filter__input filter__input--checked" type="checkbox" name="color" id="color-1" checked>
-              <label for="color-1">Белый</label>
+              <label for="color-1" class="filter__type">Белый</label>
             </div>
             <div class="filter__field">
               <input class="filter__input filter__input--checked" type="checkbox" name="color-2" id="color-2" checked>
-              <label for="color-2">Серый</label>
+              <label for="color-2" class="filter__type">Серый</label>
             </div>
-            <div class="filter__field">         		
+            <div class="filter__field">
               <input class="filter__input" type="checkbox" name="color-3" id="color-3">
-              <label for="color-3">"Тиффани"</label>
+              <label for="color-3" class="filter__type">"Тиффани"</label>
             </div>
             <div class="filter__field">
               <input class="filter__input" type="checkbox" name="color-4" id="color-4">
-              <label for="color-4">Черный</label>
+              <label for="color-4" class="filter__type">Черный</label>
             </div>
             <div class="filter__field">
               <input class="filter__input" type="checkbox" name="color-5" id="color-5">
-              <label for="color-5">Розовый</label>
+              <label for="color-5" class="filter__type" >Розовый</label>
             </div>
             <div class="filter__field">
-              <input class="filter__input" type="checkbox" name="color-6" id="color-6">
-              <label for="color-6">Оранжевый</label>
+              <input class="filter__input " type="checkbox" name="color-6" id="color-6">
+              <label for="color-6" class="filter__type" >Оранжевый</label>
             </div>
           </fieldset>
-          <fieldset class="contactform__wrapper">
+        <fieldset class="contactform__wrapper contactform__wrapper--name">
             <legend class="contactform__title">ФИО</legend>
             <div class="contactform__field">
               <label for="firstname">Имя:</label>
@@ -95,16 +95,20 @@
               <input type="text" name="middlename" id="middlename" placeholder="Отчество, если желаете">
             </div>
           </fieldset>
-          <section class="contactform__wrapper">
-            <label class="contactform__title" for="tel">Тел</label>
-            <input type="tel" name="tel" id="tel" pattern="[0-9]{1}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="+7 ХХХ ХХ ХХ" required>
-            <label class="contactform__title" for="email">E-mail</label>
-            <input type="email" name="email" id="email" placeholder="Ваш Email" required>
-            <label class="contactform__title" for="message">Доп</label>
-            <textarea name="message" id="message" placeholder="Опишите все ваши пожелания к заказу" required></textarea>
-          </section>
+           <fieldset class="contactform__wrapper contactform__wrapper--tel">
+            <legend class="contactform__title">ТЕЛ</legend>
+               <input type="tel" name="tel" id="tel" pattern="[0-9]{1}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="+7 ХХХ ХХ ХХ" required>
+          </fieldset>
+         <fieldset class="contactform__wrapper contactform__wrapper--tel">
+            <legend class="contactform__title">E-mail</legend>
+               <input type="email" name="email" id="email" placeholder="Ваш Email" required>
+          </fieldset>
+         <fieldset class="contactform__wrapper contactform__wrapper--tel">
+            <legend class="contactform__title">ДОП</legend>
+               <textarea name="message" id="message" placeholder="Опишите все ваши пожелания к заказу" required></textarea>
+          </fieldset>
           <div class="note">
-            <span>Все поля обязательны для заполнения</span>
+            <p>Все поля обязательны для заполнения</p>
           </div>
           <input type="submit" id="submitbtn" name="submitbtn" value="Отправить заказ">
         </form>
@@ -112,7 +116,7 @@
     </section>
   </main>
   <footer class="page-footer">
-    <div class="page-footer__wrapper"> 
+    <div class="page-footer__wrapper">
       <div class="page-footer__social">
         <span class="social-links">
           <a class="social-link  social-link--in" href="https://www.instagram.com/htmlacademy">Вконтакте</a>
