--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>HTML Academy: Мишка</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="less/style.less">
 </head>
@@ -11,8 +13,8 @@
   <header class="page-header">
     <h1 class="visually-hidden">Мишка</h1>
     <div class="page-header__logo">
-      <a>
-        <img src="img/logo-mobile.svg" width="100" height="100" alt="Mishka">
+      <a >
+        <img src="img/logo-mobile.svg" width="88" height="36" alt="Mishka">
       </a>
     </div>
     <nav class="main-nav  main-nav--closed  main-nav--nojs">
@@ -57,49 +59,49 @@
   </section>
   <section class="headline-item  container">
     <div class="headline-item__wrapper">
-      <h2 class="headline-item__title">Вязанные корзинки</h2>
+      <h2 class="headline-item__title">Вязаные корзинки</h2>
       <b class="headline-item__label">Товар недели</b>
       <p class="headline-item__info">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
     </div>
-    <table class="items-description">
-      <tr class="item-description">
-        <td class="item-description__field">Цвет:</td>
-        <td class="item-description__value">«Тиффани»/серый</td>
+    <table class="headline-item__table">
+      <tr>
+        <td class="headline-item__column  column-1">Цвет:</td>
+        <td class="headline-item__column  column-2">«Тиффани»/серый</td>
       </tr>
-      <tr class="item-description">
-        <td class="item-description__field">Диаметр:</td>
-        <td class="item-description__value">25 см</td>
+      <tr>
+        <td class="headline-item__column  column-1">Диаметр:</td>
+        <td class="headline-item__column  column-2">25 см</td>
       </tr>
-      <tr class="item-description">
-        <td class="item-description__field">Высота:</td>
-        <td class="item-description__value">15 см</td>
+      <tr>
+        <td class="headline-item__column  column-1">Высота:</td>
+        <td class="headline-item__column  column-2">15 см</td>
       </tr>
     </table>
-    <article class="item-spec">
-      <img class="item-spec__photo"  src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Корзинки">
-      <span class="item-spec__price">Цена: 990 руб.</span>
-      <a href=""  class="button  item-spec__button">Заказать</a>
+    <article class="headline-item__spec">
+      <img class="headline-item__photo"  src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Корзинки">
+      <span class="headline-item__price">Цена: 990 руб.</span>
+      <a href="" class="headline-item__button  button">Заказать</a>
     </article>
   </section>
   <section class="advantages  container">
     <h2 class="advantages__title">Коротко о нас</h2>
     <ul class="advantages__items">
-      <li class="advantages__item item__1">Экологичеки чистые материалы</li>
-      <li class="advantages__item  item__2" >Скандинавский стиль по российской цене</li>
-      <li class="advantages__item  item__3">Увеличивает лайки на фотографиях</li>
-      <li class="advantages__item  item__4">Связано вручную с любовью и умилением</li>
-      <li class="advantages__item  item__5">Поддержка отечественного производителя</li>
-      <li class="advantages__item  item__6">Поставляется в подарочной упаковке</li>
+      <li class="advantages__item  advantages__item--1">Экологичеки чистые материалы</li>
+      <li class="advantages__item  advantages__item--2" >Скандинавский стиль по российской цене</li>
+      <li class="advantages__item  advantages__item--3">Увеличивает лайки на фотографиях</li>
+      <li class="advantages__item  advantages__item--4">Связано вручную с любовью и умилением</li>
+      <li class="advantages__item  advantages__item--5">Поддержка отечественного производителя</li>
+      <li class="advantages__item  advantages__item--6">Поставляется в подарочной упаковке</li>
     </ul>
   </section>
   <section class="reviews  container">
     <h2 class="reviews__title">Отзывы</h2>
     <blockquote class="reviews__item">
-      <p>Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек.В отчаянии я накупила аксуссуаров и игрушек в Мишке, и мои фотографии сразу стали более стильнее, а также набирают больше лайков!</p>
+      <p>Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильнее, а также набирают больше лайков!</p>
       <cite class="reviews__auhor-name">Анастасия Красильникова</cite>
       <cite class="reviews__auhor-contacts">@misssssiskras</cite>
     </blockquote>
-    <div class="reviews-toggle">
+    <div class="reviews__toggle">
       <a  class="reviews__button  reviews__button--prev" href="" >
         <img src="img/icon-left-arrow.svg" width="50" height="25" alt="Назад">
       </a>
@@ -107,7 +109,7 @@
         <img src="img/icon-right-arrow.svg" width="50" height="25" alt="Вперед">
       </a>
     </div>
-    <a class="reviews__write" href="">Написать</a>
+    <a class="reviews-write__button " href="">Написать</a>
   </section>
   <section class="modal-block modal-block--opened  modal-block--nojs">
     <div class="modal-block__wrapper visually-hidden">
@@ -124,29 +126,36 @@
   <section class="contact-form">
     <div class="contact-form__wrapper">
       <h2 class="contact-form__title">Контакты</h2>
-      <p>e-mail:</p>
-      <a href="" class="contact-form__contacts">info@mimimishkashop.ru</a>
-      <p>адрес:</p>
-      <p> г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</p>
+      <div class="contact-form__email">
+        <p>e-mail:</p>
+        <a>info@mimimishkashop.ru</a>
+      </div>
+      <div class="contact-form__adress">
+        <p>адрес:</p>
+        <p> г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</p>
+      </div>
     </div>
+    <div class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123713!2d30.32089461573673!3d59.93879686904836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1470392419787" width="320" height="458" style="border-width: 1px;" allowfullscreen></iframe>
+    </div>
+    <form class="contact__button" action="contact-button.php" method="post">
+      <input type="submit" name="review" value="Напишите нам">
+    </form>
   </section>
 </main>
 <footer class="page-footer">
-  <div class="map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123713!2d30.32089461573673!3d59.93879686904836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1470392419787" width="320" height="458" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
-    <form class="contact__form" action="contact-form.php" method="post">
-      <input type="submit" name="review" value="Н4апишите нам">
-    </form>
+  <div class="page-footer__wrapper">
     <div class="page-footer__social">
-    <span class="social-links">
-      <a class="social-link  social-link--in" href="https://www.instagram.com/htmlacademy">Вконтакте</a>
-      <a class="social-link  social-link--fb" href="https://www.facebook.com/htmlacademy">Фейсбук</a>
-      <a class="social-link  social-link--tw" href="https://www.twitter.com/htmlacademy">Твиттер</a>
-    </span>
-  </div>
-  <div class="page-footer__copyright"> Разработано:
-    <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      <span class="social-links">
+        <a class="social-link  social-link--in" href="https://www.instagram.com/htmlacademy">IN</a>
+        <a class="social-link  social-link--fb" href="https://www.facebook.com/htmlacademy">FB</a>
+        <a class="social-link  social-link--tw" href="https://www.twitter.com/htmlacademy">TW</a>
+      </span>
+    </div>
+    <div class="page-footer__copyright">
+      <p>Разработано:</p>
+      <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+    </div>
   </div>
 </footer>
 </body>
