--- a/index.html
+++ b/index.html
@@ -49,23 +49,21 @@
   </nav>
 </header>
 <main>
+  <div class="main-page__header">
+    <h2 class="main-page__title">Милые штуки ручной работы для дома</h2>
+  </div>
   <div class="content__wrapper">
-    <section class="features__wrapper">
-      <div class="features__header">
-        <h2 class="features-title">Милые штуки ручной работы для дома</h2>
-      </div>
-      <div class="features-items__wrapper">
-        <ul class="feature-items">
-          <li class="feature-item feature-item--top">
-            <a href="">Предметы интерьера</a>
-          </li>
-          <li class="feature-item feature-item--bottom">
-            <a href="">Детские игрушки</a>
-          </li>
-        </ul>
-      </div>
+    <section class="features">
+      <ul class="feature-items">
+        <li class="feature-item feature-item--top">
+          <a href="">Предметы интерьера</a>
+        </li>
+        <li class="feature-item feature-item--bottom">
+          <a href="">Детские игрушки</a>
+        </li>
+      </ul>
     </section>
-    <section class="headline-item" >
+    <section class="headline-item">
       <article class="headline-item__wrapper">
         <div class="headline-item__header">
           <h2 class="headline-item__title">Вязаные корзинки</h2>
@@ -116,23 +114,20 @@
     <section class="reviews">
       <div class="reviews__wrapper">
         <h2 class="reviews__title">Отзывы</h2>
-        <blockquote class="reviews__item">
-          <p>Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильнее, а также набирают больше лайков!</p>
-          <cite class="reviews__auhor-name">Анастасия Красильникова</cite>
-          <cite class="reviews__auhor-contacts">@misssssiskras</cite>
-        </blockquote>
-        <div class="reviews__buttons">
-         <div class="reviews__toggle">
-          <a  class="toggle  toggle--prev" href="" >
-            <img src="img/icon-left-arrow.svg" width="50" height="25" alt="Назад">
-          </a>
-          <a  class="toggle  toggle--next" href="">
-            <img src="img/icon-right-arrow.svg" width="50" height="25" alt="Вперед">
-          </a>
-        </div>
-        <div class="reviews-write">
-          <a  class="reviews-write__button button" href="">Написать</a>
-        </div>
+        <a  class="reviews-write__button button" href="">Написать</a>
+      </div>
+      <blockquote class="reviews__item">
+        <p>Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильнее, а также набирают больше лайков!</p>
+        <cite class="reviews__auhor-name">Анастасия Красильникова</cite>
+        <cite class="reviews__auhor-contacts">@misssssiskras</cite>
+      </blockquote>
+      <div class="reviews__toggle">
+        <a  class="toggle  toggle--prev" href="" >
+          <img src="img/icon-left-arrow.svg" width="50" height="25" alt="Назад">
+        </a>
+        <a  class="toggle  toggle--next" href="">
+          <img src="img/icon-right-arrow.svg" width="50" height="25" alt="Вперед">
+        </a>
       </div>
     </section>
     <section class="modal-block modal-block--opened  modal-block--nojs">
@@ -148,25 +143,30 @@
       </div>
     </section>
   </div>
-  <section class="contact-form">
-    <div class="contact-form__wrapper">
-      <h2 class="contact-form__title">Контакты</h2>
-      <div class="contact-form__email">
-        <p>e-mail:</p>
-        <a>info@mimimishkashop.ru</a>
+  <section class="contacts">
+    <div class="contacts__wrapper">
+      <h2 class="contacts_title">Контакты</h2>
+      <div class="contacts__block">
+        <div class="contacts__email">
+          <p>e-mail:</p>
+          <a>info@mimimishkashop.ru</a>
+        </div>
+        <div class="contacts__adress">
+          <p>адрес:</p>
+          <p> г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</p>
+        </div>
       </div>
-      <div class="contact-form__adress">
-        <p>адрес:</p>
-        <p> г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</p>
-      </div>
-    </div>
+    </section>
+
     <div class="map">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123713!2d30.32089461573673!3d59.93879686904836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1470392419787" width="320" height="458" style="border-width: 1px;" allowfullscreen></iframe>
     </div>
-    <form class="contact__button" action="contact-button.php" method="post">
-      <input type="submit" name="review" value="Напишите нам">
-    </form>
-  </section>
+    <div class="contacts__button">
+      <form  action="contact-button.php" method="post">
+        <input type="submit" name="review" value="Напишите нам">
+      </form>
+    </div>
+  </div>
 </main>
 <footer class="page-footer">
   <div class="page-footer__wrapper">
