--- a/form.html
+++ b/form.html
@@ -163,8 +163,8 @@
                <p class="mobile-note">Все поля обязательны для заполнения</p>
                <p class="tablet-note">Все поля являются обязательными </p>
             </div>
-            <div class="submit-button">
-               <input type="submit" id="submitbtn" name="submitbtn" value="Отправить заказ">
+            <div class="submit-button  ">
+               <input class="button" type="submit" id="submitbtn" name="submitbtn" value="Отправить заказ">
             </div>
           </div>
         </section>
