--- a/catalog.html
+++ b/catalog.html
@@ -24,7 +24,11 @@
       </ul>
       <div class="man-nav__logo">
         <a href="index.page" >
-         <img src="img/logo-mobile.svg" width="92" height="40" alt="Mishka">
+         <picture>
+             <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg" width="160" height="78" alt="Mishka" >
+               <source media="(min-width: 768px)" srcset="img/logo-tablet.svg"  width="112" height="50" alt="Mishka">
+                 <img src="img/logo-mobile.svg" width="92" height="40" alt="Mishka">
+               </picture>
        </a>
      </div>
      <ul class="main-nav__service">
@@ -58,10 +62,14 @@
     <section class="item-blocks__wrapper">
       <article class="item-block">
         <div class="item-block__photo">
-          <img class="item-block__photo-item" src="img/photo-1-mobile@1x.jpg" width="258" height="195" alt="Зайчик-попрыгайчик">
-        </div>
-        <div class="item-block__body">
-          <div class="item-block__info">
+          <picture>
+            <source media="(min-width: 1150px)" srcset="img/photo-1-desktop@1x.jpg 1x, img/photo-1-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-1-tablet@1x.jpg 1x, img/photo-1-tablet@2x.jpg 2x">
+                <img class="item-block__photo-item" srcset="img/photo-1-mobile@1x.jpg 1x, img/photo-1-mobile@2x.jpg 2x" alt="Зайчик-попрыгайчик">
+              </picture>
+            </div>
+            <div class="item-block__body">
+              <div class="item-block__info">
             <h3 class="item-block__info-title">Зайчик-попрыгайчик</h3>
             <p class="item-block__info-description">Рост 30см, вес 200г </p>
           </div>
@@ -73,7 +81,11 @@
       </article>
       <article class="item-block">
         <div class="item-block__photo">
-          <img class="item-block__photo-item" src="img/photo-2-mobile@1x.jpg" width="258" height="195" alt="Корзинка для белья">
+          <picture>
+              <source media="(min-width: 1150px)" srcset="img/photo-2-desktop@1x.jpg 1x, img/photo-2-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-2-tablet@1x.jpg 1x, img/photo-2-tablet@2x.jpg 2x">
+              <img class="item-block__photo-item" srcset="img/photo-2-mobile@1x.jpg 1x, img/photo-2-mobile@2x.jpg 2x" alt="Корзинка для белья">
+            </picture>
         </div>
         <div class="item-block__body">
           <div class="item-block__info">
@@ -88,7 +100,11 @@
       </article>
       <article class="item-block">
         <div class="item-block__photo">
-          <img class="item-block__photo-item" src="img/photo-3-mobile@1x.jpg" width="258" height="195" alt="Большая корзинка для игрушек">
+          <picture>
+              <source media="(min-width: 1150px)" srcset="img/photo-3-desktop@1x.jpg 1x, img/photo-3-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-3-tablet@1x.jpg 1x, img/photo-3-tablet@2x.jpg 2x">
+              <img class="item-block__photo-item" srcset="img/photo-3-mobile@1x.jpg 1x, img/photo-3-mobile@2x.jpg 2x" alt="Большая корзинка для игрушек">
+            </picture>
         </div>
         <div class="item-block__body">
           <div class="item-block__info">
@@ -102,16 +118,22 @@
         </div>
       </article>
     </section>
-    <section class="videocontent">
+    <section class="video">
+      <div class="videocontent">
 
       <h3 class="videocontent__title">Процесс производства</h3>
-      <img class="videocontent__photo" src="img/video-mobile@1x.jpg" width="258" height="150" alt="Процесс производства">
 
       <div class="videocontent__player">
+           <picture>
+            <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+            <img class="videocontent__photo" srcset="img/video-mobile@1x.jpg 1x, img/video-mobile@2x.jpg 2x" alt="Превью видео">
+          </picture>
+      </div>
 
         <p class="videocontent__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как пояляются наши товары.</p>
-        <a href="" class="videocontent__order btn">Сделать заказ</a>
-      </div>
+        <a class="videocontent__button  button" href="">Сделать заказ</a>
+    </div>
 
     </section>
     <section class="modal-block modal-block--opened  modal-block--nojs">
