--- a/index.html
+++ b/index.html
@@ -25,174 +25,194 @@
         </ul>
         <div class="man-nav__logo">
           <a>
-           <img src="img/logo-mobile.svg" width="92" height="40" alt="Mishka">
-         </a>
-       </div>
-       <ul class="main-nav__service">
-        <li class="main-nav__item  main-nav__item--search">
-          <a href="#" >Поиск по сайту</a>
-        </li>
-        <li class="main-nav__item  main-nav__item--cart">
-          <a href="#">Корзина: пока пуста</a>
-        </li>
-      </ul>
-      <ul class="main-nav__sell-out">
-        <li class="main-nav__item">
-          <a href="#">Новые поступления</a>
-        </li>
-        <li class="main-nav__item">
-          <a href="#">Распродажа</a>
-        </li>
-      </ul>
-      <ul class="main-nav__delivery">
-        <li class="main-nav__item   main-nav__item--delivery">Бесплатная доставка по миру</li>
-      </ul>
-    </nav>
-  </header>
-</div>
-<main>
-  <div class="main-page__wrapper">
-    <div class="main-page__header">
-      <h2 class="main-page__title">Милые штуки ручной работы для дома</h2>
+            <picture>
+             <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg" width="160" height="78" alt="Mishka" >
+               <source media="(min-width: 768px)" srcset="img/logo-tablet.svg"  width="112" height="50" alt="Mishka">
+                 <img src="img/logo-mobile.svg" width="92" height="40" alt="Mishka">
+               </picture>
+             </a>
+           </div>
+           <ul class="main-nav__service">
+            <li class="main-nav__item  main-nav__item--search">
+              <a href="#" >Поиск по сайту</a>
+            </li>
+            <li class="main-nav__item  main-nav__item--cart">
+              <a href="#">Корзина: пока пуста</a>
+            </li>
+          </ul>
+          <ul class="main-nav__sell-out">
+            <li class="main-nav__item">
+              <a href="#">Новые поступления</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="#">Распродажа</a>
+            </li>
+          </ul>
+          <ul class="main-nav__delivery">
+            <li class="main-nav__item   main-nav__item--delivery">Бесплатная доставка по миру</li>
+          </ul>
+        </nav>
+      </header>
     </div>
-      <section class="features">
-        <ul class="feature-items">
-          <li class="feature-item feature-item--top">
-            <a href="">Предметы интерьера</a>
-          </li>
-          <li class="feature-item feature-item--bottom">
-            <a href="">Детские игрушки</a>
-          </li>
-        </ul>
-      </section>
-      <section class="headline-item">
-        <article class="headline-item__wrapper">
-          <div class="headline-item__header">
-            <h2 class="headline-item__title">Вязаные корзинки</h2>
-            <b class="headline-item__label">Товар недели</b>
+    <main>
+      <div class="main-page__wrapper">
+        <div class="main-page__header">
+          <h2 class="main-page__title">Милые штуки ручной работы для дома</h2>
+        </div>
+        <section class="features">
+          <ul class="feature-items">
+            <li class="feature-item feature-item--top">
+              <a href="">Предметы интерьера</a>
+            </li>
+            <li class="feature-item feature-item--bottom">
+              <a href="">Детские игрушки</a>
+            </li>
+          </ul>
+        </section>
+        <section class="headline-item">
+          <article class="headline-item__wrapper">
+            <div class="headline-item__header">
+              <h2 class="headline-item__title">Вязаные корзинки</h2>
+              <b class="headline-item__label">Товар недели</b>
+            </div>
+            <div class="headline-item__block">
+              <div class="headline-options">
+                <p class="headline-item__info">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
+                <table class="headline-item__table">
+                  <tr>
+                    <td class="headline-item__column  column-1">Цвет:</td>
+                    <td class="headline-item__column  column-2">«Тиффани»/серый</td>
+                  </tr>
+                  <tr>
+                    <td class="headline-item__column  column-1">Диаметр:</td>
+                    <td class="headline-item__column  column-2">25 см</td>
+                  </tr>
+                  <tr>
+                    <td class="headline-item__column  column-1">Высота:</td>
+                    <td class="headline-item__column  column-2">15 см</td>
+                  </tr>
+                </table>
+              </div>
+              <div class= "headline-item__photo-wrapper">
+               <picture>
+            <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
+            <img class= "headline-item__photo" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" alt="Вязанные корзинки">
+          </picture>
+              </div>
+              <div class="headline-item__footer">
+                <span class="headline-item__price">Цена: 990 руб.</span>
+                <a href="" class="headline-item__button  button">Заказать</a>
+              </div>
+            </div>
+          </article>
+        </section>
+        <section class="advantages">
+          <article class="advantages__wrapper">
+            <h2 class="advantages__title">Коротко о нас</h2>
+            <div class="advantages__list">
+              <ul class="advantages__column  advantages__column--right">
+
+                <li class="advantages__item">
+                  <svg class="icon  icon__item--1"><use xlink:href="#icon-feature-1"></use></svg>
+                  Экологичеки чистые материалы
+                </li>
+
+                <li class="advantages__item  advantages__item--2" >Скандинавский стиль по российской цене</li>
+                <li class="advantages__item  advantages__item--3">Увеличивает лайки на фотографиях</li>
+              </ul>
+              <ul class="advantages__column  advantages__column--left">
+                <li class="advantages__item  advantages__item--4">Связано вручную с любовью и умилением</li>
+                <li class="advantages__item  advantages__item--5">Поддержка отечественного производителя</li>
+                <li class="advantages__item  advantages__item--6">Поставляется в подарочной упаковке</li>
+              </ul>
+            </div>
+          </article>
+        </section>
+        <section class="reviews">
+          <div class="reviews__wrapper">
+            <h2 class="reviews__title">Отзывы</h2>
+            <a  class="reviews-write__button button" href="">Написать</a>
+            <blockquote class="reviews__item">
+            <p>Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильнее, а также набирают больше лайков!</p>
+            <cite class="reviews__author-name">Анастасия Красильникова</cite>
+            <cite class="reviews__author-contacts">@misssssiskras</cite>
+          </blockquote>
+          <div class="reviews__toggle">
+            <a  class="toggle  toggle--prev" href="" >
+              <img src="img/icon-left-arrow.svg" width="50" height="25" alt="Назад">
+            </a>
+            <a  class="toggle  toggle--next" href="">
+              <img src="img/icon-right-arrow.svg" width="50" height="25" alt="Вперед">
+            </a>
           </div>
-          <div class="headline-item__block">
-            <div class="headline-options">
-              <p class="headline-item__info">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
-              <table class="headline-item__table">
-                <tr>
-                  <td class="headline-item__column  column-1">Цвет:</td>
-                  <td class="headline-item__column  column-2">«Тиффани»/серый</td>
-                </tr>
-                <tr>
-                  <td class="headline-item__column  column-1">Диаметр:</td>
-                  <td class="headline-item__column  column-2">25 см</td>
-                </tr>
-                <tr>
-                  <td class="headline-item__column  column-1">Высота:</td>
-                  <td class="headline-item__column  column-2">15 см</td>
-                </tr>
-              </table>
+        </div>
+        <div class="reviews__photo">
+        </div>
+      </section>
+      <section class="modal-block modal-block--opened  modal-block--nojs">
+        <article class="modal-block__wrapper visually-hidden">
+          <h1 class="modal-block__title"></h1>
+          <p>Выберите размер</p>
+          <div class="modal-block__buttons">
+            <button class="modal-block__button" type="button">S</button>
+            <button class="modal-block__button" type="button">M</button>
+            <button class="modal-block__button" type="button">L</button>
+          </div>
+          <a class="button  modal-block__basket" href="">Добавить</a>
+        </article>
+      </section>
+      <section class="contacts">
+        <article class="contacts__wrapper">
+          <h2 class="contacts__title">Контакты</h2>
+          <div class="contacts__block">
+            <div class="contacts__email">
+              <p>e-mail:</p>
+              <a>info@mimimishkashop.ru</a>
             </div>
-            <div class= "headline-item__photo">
-            </div>
-            <div class="headline-item__footer">
-              <span class="headline-item__price">Цена: 990 руб.</span>
-              <a href="" class="headline-item__button  button">Заказать</a>
+            <div class="contacts__adress">
+              <p>адрес:</p>
+              <p> г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</p>
             </div>
           </div>
         </article>
+        <div class="map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123713!2d30.32089461573673!3d59.93879686904836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1470392419787" width="320" height="458" style="border-width: 1px;" allowfullscreen></iframe>
+        <!-- <picture>
+            <source media="(min-width: 1150px)" srcset="img/map-desktop@1x.jpg">
+            <source media="(min-width: 768px)" srcset="img/map-tablet@1x.jpg">
+            <img src="img/map-mobile@1x.jpg" alt="Карта">
+          </picture>
+ -->
+        </div>
       </section>
-      <section class="advantages">
-        <article class="advantages__wrapper">
-          <h2 class="advantages__title">Коротко о нас</h2>
-          <div class="advantages__list">
-            <ul class="advantages__column  advantages__column--right">
-              <li class="advantages__item  advantages__item--1">Экологичеки чистые материалы</li>
-              <li class="advantages__item  advantages__item--2" >Скандинавский стиль по российской цене</li>
-              <li class="advantages__item  advantages__item--3">Увеличивает лайки на фотографиях</li>
-            </ul>
-            <ul class="advantages__column  advantages__column--left">
-              <li class="advantages__item  advantages__item--4">Связано вручную с любовью и умилением</li>
-              <li class="advantages__item  advantages__item--5">Поддержка отечественного производителя</li>
-              <li class="advantages__item  advantages__item--6">Поставляется в подарочной упаковке</li>
-            </ul>
-          </div>
-        </article>
+      <div class="contacts__button button">
+        <form  action="contact-button.php" method="post">
+          <input class="button" type="submit" name="review" value="Напишите нам">
+        </form>
+      </div>
+    </div>
+  </main>
+  <footer class="page-footer">
+    <div class="page-footer__wrapper">
+      <section class="logo-in-footer">
+        <a class="footer__logo">
+        <img src="img/logo-footer.svg" width="102" height="35" alt="Mishka">
+        </a>
       </section>
-     <section class="reviews">
-        <div class="reviews__wrapper">
-         <div class="rewievs__header">
-          <h2 class="reviews__title">Отзывы</h2>
-          <a  class="reviews-write__button button" href="">Написать</a>
-        </div>
-        <blockquote class="reviews__item">
-          <p>Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильнее, а также набирают больше лайков!</p>
-          <cite class="reviews__author-name">Анастасия Красильникова</cite>
-          <cite class="reviews__author-contacts">@misssssiskras</cite>
-        </blockquote>
-      <div class="reviews__toggle">
-        <a  class="toggle  toggle--prev" href="" >
-          <img src="img/icon-left-arrow.svg" width="50" height="25" alt="Назад">
-        </a>
-        <a  class="toggle  toggle--next" href="">
-          <img src="img/icon-right-arrow.svg" width="50" height="25" alt="Вперед">
-        </a>
+      <div class="page-footer__social">
+        <span class="social-links">
+          <a class="social-link  social-link--in" href="https://www.instagram.com/htmlacademy">IN</a>
+          <a class="social-link  social-link--fb" href="https://www.facebook.com/htmlacademy">FB</a>
+          <a class="social-link  social-link--tw" href="https://www.twitter.com/htmlacademy">TW</a>
+        </span>
       </div>
+      <div class="page-footer__copyright">
+        <p>Разработано:</p>
+        <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HA</a>
       </div>
-      <div class="reviews__photo">
-      </div>
-    </section>
-    <section class="modal-block modal-block--opened  modal-block--nojs">
-      <article class="modal-block__wrapper visually-hidden">
-        <h1 class="modal-block__title"></h1>
-        <p>Выберите размер</p>
-        <div class="modal-block__buttons">
-          <button class="modal-block__button" type="button">S</button>
-          <button class="modal-block__button" type="button">M</button>
-          <button class="modal-block__button" type="button">L</button>
-        </div>
-        <a class="button  modal-block__basket" href="">Добавить</a>
-      </article>
-    </section>
-  <section class="contacts">
-    <article class="contacts__wrapper">
-      <h2 class="contacts__title">Контакты</h2>
-      <div class="contacts__block">
-        <div class="contacts__email">
-          <p>e-mail:</p>
-          <a>info@mimimishkashop.ru</a>
-        </div>
-        <div class="contacts__adress">
-          <p>адрес:</p>
-          <p> г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</p>
-        </div>
-      </div>
-    </article>
-    <div class="map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123713!2d30.32089461573673!3d59.93879686904836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1470392419787" width="320" height="458" style="border-width: 1px;" allowfullscreen></iframe>
     </div>
-  </section>
-  <div class="contacts__button">
-    <form  action="contact-button.php" method="post">
-      <input type="submit" name="review" value="Напишите нам">
-    </form>
-  </div>
-</div>
-</main>
-<footer class="page-footer">
-  <div class="page-footer__wrapper">
-    <section class="logo-in-footer">
-      <img src="img/logo-mobile.svg" alt="Mishka">
-    </section>
-    <div class="page-footer__social">
-      <span class="social-links">
-        <a class="social-link  social-link--in" href="https://www.instagram.com/htmlacademy">IN</a>
-        <a class="social-link  social-link--fb" href="https://www.facebook.com/htmlacademy">FB</a>
-        <a class="social-link  social-link--tw" href="https://www.twitter.com/htmlacademy">TW</a>
-      </span>
-    </div>
-    <div class="page-footer__copyright">
-      <p>Разработано:</p>
-      <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HA</a>
-    </div>
-  </div>
-</footer>
+  </footer>
 </body>
 </html>
 
